# AIRouter

./: CLAUDE.md  README.md  config.example.yaml  main.py  pyproject.toml
src/ai_router/: __init__.py  __main__.py  app.py  cli.py  config.py  forwarder.py  storage.py
