[project]
name = "ai-router"
version = "0.1.0"
description = "An HTTP reverse proxy router with round-robin load balancing and request/response storage"
requires-python = ">=3.11"
dependencies = [
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
]

[project.scripts]
ai-router = "ai_router.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["src/ai_router"]
sources = ["src"]
